--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,7 +5,7 @@ All changes made to the library will show here in future versions.
 
 
 
-v2.1
+v2.1 (27 May, 2018)
 
 - added verb restrictions
 - polished and expanded the manual
