Fix Manual Example and Externalized Code
Fix the source of short example 6, which still used the old modules
names. In Ch.12, fix the `include::` directive to use the new name of
`lib_messages.i` --> `lib_messages_runtime.i`, and change the length
of the ALAN code delimiters to avoid conflicts with the 80-dashes
comment line in the library source.

Rebuild all documents.

--- a/extras_src/manual/StdLibMan_12.adoc
+++ b/extras_src/manual/StdLibMan_12.adoc
@@ -19,9 +19,9 @@ The first person of some default wordings (for example "`I don't know the word $
 To edit these for your game, open `lib_messages.i` and edit the wanted message(s) there.
 
 [source,alan]
---------------------------------------------------------------------------------
-include::{StdLibInc}/lib_messages.i[]
---------------------------------------------------------------------------------
+---------------------------------------------
+include::{StdLibInc}/lib_messages_runtime.i[]
+---------------------------------------------
 
 // EOF //
 
