--- a/extras_src/manual/StdLibMan_01.adoc
+++ b/extras_src/manual/StdLibMan_01.adoc
@@ -8,7 +8,7 @@
 ********************************************************************************
 ////
 
-[[ch1]]
+[[ch.intro]]
 = Introduction
 
 // @NOTE: We should specify the actual ALAN version that the library was tested
@@ -18,9 +18,10 @@
 // 		  releases.
 
 This is the manual for the ALAN Standard Library v{StdLibVer}.
-This manual describes how to use the library together with the ALAN Interactive Fiction Language system v3.0 and subsequent versions, to create works of interactive fiction, or text adventures.
-The library defines responses for verbs and commands commonly used in gameplay, such as _examine_, _take_, _drop_ and _attack_, together with numerous other ones.
-The library also defines various global attributes (for example `takeable`, `NOT openable`), as well as object and actor attributes and classes (for example `CLOTHING`, `WEAPON`, `PERSON`), together with illegal parameter messages (for example "`That's not something you can examine`").
+You'll learn how to use the library, together with the ALAN Interactive Fiction Language system v3.0, to create works of interactive fiction, also known as text adventures.
+
+The library defines numerous verbs and commands commonly used in gameplay, such as _examine_, _take_, _drop_, _attack_, etc., along with appropriate checks and default responses to ensure they are used correctly.
+It also defines various global attributes (e.g. `takeable`, `NOT openable`), as well as object and actor attributes and classes (e.g. `CLOTHING`, `WEAPON`, `PERSON`), together with illegal parameter messages (e.g. "`That's not something you can examine`").
 
 The first official version (v1.0) of the ALAN Standard Library was published in 2010.
 Before that, versions 0.x, written by Steve Griffiths, were available for use.
@@ -29,22 +30,27 @@ The writer of the current version is Anssi Räisänen.
 
 The ALAN Standard Library v{StdLibVer} consists of the following source files:
 
-* `library.i` -- the main library file that imports all the others:
+* `library.i` -- the main library file that imports all the other modules:
 ** `lib_classes.i`
 ** `lib_definitions.i`
 ** `lib_locations.i`
-** `lib_messages.i`
+** `lib_messages_runtime.i`
+** `lib_messages_library.i`
 ** `lib_verbs.i`
+** `lib_verbs_restrictions.i`
 
 
-To import the standard library to your game, just add the following line to your adventure source file:
+To import the library in your game, just add the following line to your adventure source file:
 
 [source,alan]
 --------------------------------------------------------------------------------
 IMPORT 'library.i'.
 --------------------------------------------------------------------------------
 
-In addition, the following files, none of which are necessary for using the library, can be found in the library distribution package:
+
+== Additional Resources
+
+In addition to library modules, the Standard Library distribution package contains some extra files, none of which are necessary for using the library:
 
 // @TODO: FIX LIST OF EXTRA LIB FILES!
 // [ ] Some of these files have been renamed or have different extensions now.
@@ -65,41 +71,42 @@ You can use this as a starting point for a new project.
 `testgame.alan`   :: The source code for a test game showcasing the features of the library.
 `testgame.ifid`   :: An IFID identification number of the compiled `testgame.a3c` file.
 
-Thank you to Steve Griffiths for the score notification code snippet and for the early versions of the library, and to Alan Bampton for the code used for clothing objects (layered clothing).
-
-And naturally many thanks to Thomas Nilefalk and Göran Forslund for the ALAN Interactive Fiction Language.
 
 
-== What to read if you're a complete newbie
+== Where to Start
 
-It would be advisable to start with the ALAN Manual (available on the ALAN website at {AlanWWW}) to get an idea of how the language works in general.
-The ALAN manual contains all the features of the language; this library manual only describes what is pre-defined in the standard library.
-After reading the ALAN manual, read this manual thoroughly, with the following exceptions:
+Some guidelines on how to approach reading this manual, based on your knowledge and experience of the ALAN language, or lack thereof.
 
+
+
+=== ALAN Newbies
+
+[big]#_Where to start if you’re a complete newbie to ALAN IF._#
+
+If you've never programmed in ALAN before, it's advisable that you being by studying the _ALAN Manual_ (available on the ALAN website at {AlanWWW}) to get an idea of how the language works in general.
+The _ALAN Manual_ described all the features of the language, whereas this manual focuses only on the features defined in the Standard Library.
+After reading the _ALAN Manual_, read this manual thoroughly, with the following exceptions:
+
+// @DELME: "Ch2. What is different in v2.x?" will be eliminated from the book:
 * You don't need to read <<ch2>> if you haven't used the previous version 1 of the library, but it might be useful if you want to have a quick preview of some features the library is capable of.
 
+// @FIXME: What is now Ch.10 will be revised soon; also, the library messages have
+//         been moved to 'lib_messages_library.i', so they no longer belong to the
+// 		   'my_game' file/chapter:
 * Read only the early part of <<ch10>> to get an idea of how that meta-instance is to be used in the game source.
 The later passages in that chapter, listing all possible illegal parameter message attributes and verb check attributes of the `my_game` meta-instance, are meant to serve as a searchable index rather than to be read systematically.
 
 
-== What to read if you're familiar with ALAN but haven't used the standard library v1.0
+=== Standard Library Newbies
 
-// @TODO: ADD XREF
+[big]#_What to read if you're familiar with ALAN but haven't used the Standard Library_#
+
 
 Read through the whole of this library manual carefully, with the exception of <<ch10>>, of which you should read only the early part to understand the significance of using the `my_game` meta-instance in the game source.
 The latter part of that chapter, where the illegal parameter messages and other messages are listed, is meant to be read only cursorily and to be used as a searchable index when needed.
 
-== What to read if you have been using the v1.0 of the standard library
 
-// @TODO: ADD XREF
-
-In many places v2.x works quite differently from v1.0, so read first <<ch2>> to get an idea of what has changed since the previous version.
-Read cursorily through <<ch3>>, <<ch5>> and <<ch6>> to learn about new features such as certain attributes.
-Read carefully the first part of <<ch10>> to understand the significance of using that meta-instance in the game source.
-The latter part of that chapter, where the illegal parameter messages and other messages are listed, is meant to be read only cursorily, to be used as a searchable index when needed.
-
-
-== A note on the coding style used in this manual
+== Typographic Conventions
 
 The ALAN example code used in this manual follows the principle that all reserved words in the ALAN language are written in all caps:
 
@@ -148,6 +155,12 @@ or even
 the garden isa location. exit west to street. end the garden.
 --------------------------------------------------------------------------------
 
+[[sec.acknowledgments]]
+== Acknowledgments
+
+Thanks to Steve Griffiths for the score notification code snippet and for his early versions of the library, and to Alan Bampton for the code used for implementing clothing objects (layered clothing).
+
+And, obviously, many thanks to Thomas Nilefalk and Göran Forslund for the ALAN Interactive Fiction Language.
+
 
 // EOF //
-
