--- a/extras_src/manual/StdLibMan_02.adoc
+++ b/extras_src/manual/StdLibMan_02.adoc
@@ -8,197 +8,16 @@
 ********************************************************************************
 ////
 
-[[ch2]]
-= What is different in v2.x?
+[[ch.getting-started]]
+= Getting Started
 
-* The author doesn't necessarily have to edit the library files any longer when writing a game.
-It's now possible to write a game just importing the library and define everything in your own game source file(s).
-It's still possible to edit the library files directly, if this is preferred.
-There are some cases in which the library needs to be edited, for example to change the predefined runtime messages.
-
-* There are five library modules in v2.x (instead of the four that were in v1.x): `lib_classes.i`, `lib_definitions.i`, `lib_locations.i`, `lib_messages.i` and `lib_verbs.i`.
-
-* The `hero` instance is left out of the library.
-It can be now defined from scratch by the game author.
-(There are still checks for the hero within various verbs, and these work whether the author defines the hero or not.
-There are also numerous default verb responses and other messages that take the hero into account, just like in the previous version of the library, but these can be easily overridden.)
-
-* An obligatory meta instance, `my_game`, needs to be coded by the author to each new game.
-Its shortest possible formulation is:
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE my_game ISA DEFINITION_BLOCK
-END THE.
---------------------------------------------------------------------------------
-+
-Without it, the game won’t compile correctly.
-Inside this instance, it is possible for example to override default messages provided by the library, like this:
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE my_game ISA DEFINITION_BLOCK
-  VERB examine
-    DOES ONLY "Nothing special."  -- Your own default message for examining
-                                  -- objects, instead of the default provided
-  END VERB.                       -- by the library
-END THE.
---------------------------------------------------------------------------------
-+
-(The default library message for examining various things is "`You notice nothing unusual about [the object].`"
-Above, the author has replaced this default message with a shorter phrasing.) +
-In the `my_game` instance, you can also define global attributes, verb check messages, illegal parameter messages and many other things.
-For more details, see <<ch10>>.
+In this chapter you'll learn how to integrate the Standard Library into your ALAN adentures, how to set up your working environment, and other useful notions as a beginner to the library.
 
 
-* Check messages and illegal parameter messages can be edited much more smoothly.
-For example, you don't have to edit the same check for every verb separately (or cut and paste); you can now change the wording in one place and it will affect all the places where that same check is found, throughout the library.
+[[sec.importing-stdlib]]
+== Importing the Library
 
-
-* The `LISTABLE_CONTAINER` class of version 1.0 has been renamed `LISTED_CONTAINER`, which sounds slightly better.
-
-* There are some new attributes:
-
-** `allowed` is needed for container objects to indicate which objects they can take:
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE drawer ISA LISTED_CONTAINER IN nightstand
-  HAS allowed {diary, keys}.
-  ...
-END THE drawer.
---------------------------------------------------------------------------------
-+
-This will effectively prohibit unwanted successful outcomes for player commands such as [.play]#&gt; _put coffee cup in drawer_# or [.play]#&gt; _put suitcase in drawer_#.
-Besides `put_in`, this attribute also applies to the verbs `empty_in`, `pour_in` and `throw_in`.
-
-** `distant`/`NOT distant`, in addition to the existing `reachable`/`NOT reachable`.
-This has proved to be a handy distinction to have at hand.
-It is possible for the hero for example to talk with an NPC (non-player character) that is NOT reachable (for example if the hero is lying down on a bed), but not with one that is distant.
-Similarly, you can throw something at, to or into a NOT reachable instance (for example a basketball into a basket), but not at, to or into a distant one.
-There are also some other individual cases where you can manipulate NOT reachable objects as opposed to distant ones.
-The default responses for NOT reachable and distant objects are a bit different: a NOT reachable object is described to be "`out of your reach`" but a distant one is "`too far away`".
-For example the library-defined ceiling object for indoor rooms is NOT reachable ("`The ceiling is out of your reach`") while the library-defined sky object is distant ("`The sky is too far away`").
-
-
-** ACTORS are defined to be either `compliant` or `NOT compliant`.
-By default, they are NOT compliant.
-This attribute is needed when we try to get something from an NPC (a non-player character).
-For example, the verb `take_from` doesn't work with ACTORS by default; the only way to make an ACTOR give you something in their possession by default is to ask for it.
-Also implicit taking doesn't work with ACTORS, i.e. if an NPC is carrying an apple and you type [.play]#&gt; _eat apple_#, the outcome will be [.play]#That seems to belong to the [NPC].#; the apple won't be automatically taken by the hero, as it would if it was not carried by anyone.
-
-** Every DOOR now has an `otherside` attribute which can be used if the game author wants to ensure that a DOOR will be correctly opened, closed, locked and unlocked from both sides.
-When the open/closed status of a DOOR instance changes, the status of its otherside counterpart (in the next room) is changed accordingly by the library.
-(If the author declares no otherside attribute for a DOOR, then this doesn't happen automatically.)
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE kitchen_door ISA DOOR AT kitchen
-  HAS otherside livingroom_door.
-  IS lockable. IS locked.
-  HAS matching_key small_key.
-END THE.
-
-THE livingroom_door ISA DOOR AT livingroom
-END THE.
-
-THE small_key ISA OBJECT IN drawer
-END THE.
---------------------------------------------------------------------------------
-+
-Above, the `livingroom_door` will also be lockable, locked, have `otherside kitchen_door` and can be opened by the `small_key`, even if none of these attributes were explicitly declared in the `livingroom_door` code.
-
-** Every lockable DOOR has a `matching_key` attribute (see the above example) which should be declared at the DOOR instance if it's meant to be locked/unlocked.
-If the hero carries the matching key of a locked DOOR, unlocking it will be possible bu just typing [.play]#&gt; _unlock door_# or even [.play]#&gt; _open door_# and not necessarily using the longer formulation [.play]#&gt; _unlock door with key_#.
-This attribute also eases up the coding required for locked DOORs.
-
-** The `closed` and `closeable` attributes have been changed to `open` and `openable`, which are more intuitive.
-
-** The `SCENERY` class has been removed.
-Instead, `scenery` is now declared as an attribute.
-
-** Similarly, the `BACKGROUND` class has been removed.
-Use the (NOT) `reachable`/`distant` attributes instead, where applicable.
-
-* Some object classes are made to work in a simpler way from v1.0.
-For example, an object in the subclass `LIQUID` won't have to be declared to have a `vessel` attribute any longer (if the liquid is carried in a vessel of any kind).
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE juice ISA LIQUID IN bottle
-END THE juice.
-
-THE bottle ISA LISTED_CONTAINER
-END THE bottle.
---------------------------------------------------------------------------------
-// @CHECKME: The above example needs to be checked if it still works with current StdLib!
-
-
-// @CHECKME: The example below also needs to be checked if it still works!
-* Similarly, `CLOTHING` objects worn by the hero and any NPCs can now be implemented more smoothly:
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE hero ISA ACTOR
-  IS wearing {jeans, shirt}.
-END THE hero.
-
-THE jeans ISA CLOTHING
-  IS...
-END THE.
-
-THE shirt ISA CLOTHING
-  IS...
-END THE.
---------------------------------------------------------------------------------
-+
-or
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE jill ISA ACTOR AT garden
-  IS wearing {dress}.
-END THE jill.
-
-THE dress ISA CLOTHING
-END THE dress.
---------------------------------------------------------------------------------
-
-// @FIXME: "automatic formulation" ???!!!
-* Formatting the game title, author, year and version at the start of the game is now easier.
-There is an automatic formulation which can be easily included if desired.
-
-// @FIXME: "the response for simplified." ???!!!
-* Some default verb responses have been changed from v1.0.
-For example, the response for simplified.
-
-
-* It is possible to make any group of verbs to work similarly at once, handy when you for example need to restrict certain verbs from working in the usual way, for example if the hero is tied to a chair, hiding etc.
-+
-[source,alan]
---------------------------------------------------------------------------------
-EVENT tied_up
-  "One of the thugs ties you tightly into a chair and gags you, and
-  you cannot move your arms or legs at all."
-  SET restricted_level OF my_game TO 2. -- = you cannot talk or move
-END EVENT.
---------------------------------------------------------------------------------
-+
-(For the various levels of restriction, see <<sec.restricted-actions>>)
-+
-You can also block any individual verb(s) from functioning in the game:
-+
-[source,alan]
---------------------------------------------------------------------------------
-THE my_game ISA DEFINITION_BLOCK
-  CAN NOT dance.
-  CAN NOT jump.
-  CAN NOT sing.
-  HAS restricted_response "You're not supposed to have any fun in this game."
-END THE my_game.
---------------------------------------------------------------------------------
-
-== How to import the standard library into an ALAN game
+[big]_How to import the Standard Library into your ALAN adenture games_#
 
 To write an ALAN game, you won't necessarily need the standard library at all.
 It is perfectly possible to define everything in your game by yourself.
