--- a/extras_src/manual/StdLibMan_03.adoc
+++ b/extras_src/manual/StdLibMan_03.adoc
@@ -213,10 +213,11 @@ END THE my_game.
 == DARK_LOCATION and the lit attribute
 
 
-In dark locations, actions requiring seeing are automatically disabled by the library.
-All dark locations have the attribute `NOT lit`.
-The locations belonging to the subclass DARK_LOCATION need a lit LIGHTSOURCE object to be present to be lit.
-To implement a DARK_LOCATION, it is enough to implement it for example in the following way:
+In dark locations, all actions requiring the ability to see are automatically disabled by the library.
+All dark locations have the `NOT lit` attribute.
+In order for locations of the `DARK_LOCATION` subclass to be lit, they need the presence of a lit `LIGHTSOURCE` object.
+
+Here's an example of how to implement a `DARK_LOCATION`:
 
 
 [source,alan]
@@ -226,10 +227,14 @@ THE basement ISA DARK_LOCATION
 END THE.
 --------------------------------------------------------------------------------
 
-The description of a dark location will be by default "It is pitch black.
-You can't see anything at all." This default can be changed by editing the `dark_loc_desc` attribute of the `my_game` instance (see p. 78).
+// @FIXME: The 'dark_loc_desc' attribute is now in "lib_messages_library.i".
+//         Also, update the page cross-ref with a real XRef.
 
-If you add a description of your own to a `DARK_LOCATION`, this description will be shown only if the location is lit up by any means:
+The default description of a dark location will be "`It is pitch black.
+You can't see anything at all.`"
+This default description can be changed by editing the `dark_loc_desc` attribute of the `my_game` instance (see p. 78).
+
+If you add your own description to a `DARK_LOCATION`, it will only be shown if the location is lit up by some means:
 
 
 [source,alan]
@@ -241,7 +246,7 @@ END THE.
 --------------------------------------------------------------------------------
 
 
-In order that a DARK_LOCATION is lighted, a LIGHTSOURCE object (a lantern, a match, a ceiling lamp, any other kind of light object) should be present.
+In order for a `DARK_LOCATION` to be lit, a `LIGHTSOURCE` object (a lantern, a match, a ceiling lamp, or any other kind of object emitting light) needs to be present and lit.
 
 In darkness, you are not able to manipulate things other than turn on a LIGHTSOURCE and drop items you're carrying (these checks are found in `lib_verbs.i`).
 You can exit normally and use verbs that don't require seeing, such as smell, listen and think.
@@ -249,7 +254,7 @@ If you are in a DARK_LOCATION with an NPC (= a non-player character), you are ab
 If you wish to change these restrictions, see the respective verbs in `lib_verbs.i` and modify their checks.
 
 Note that you cannot change the name of a location mid-game.
-Thus, if you define a dark location called for example 'Darkness' and wish to make it lit at some point in the game, the name will still be 'Darkness' even if the location description can be changed to describe the illuminated location.
+Therefore, if you name a dark location '`Darkness`' and wish to make it lit at some point in the game, its name will still be '`Darkness`' even if the location description can be changed to describe the illuminated location.
 To show a change in the location name, you must locate the hero in another location when the dark location is lit.
 For example,
 
