--- a/extras_src/manual/StdLibMan_06.adoc
+++ b/extras_src/manual/StdLibMan_06.adoc
@@ -9,11 +9,13 @@
 ////
 
 
-[[ch6]]
+[[ch.objects]]
 = Objects
 
 
-== Pre-defined object classes in the library
+== Object Classes
+
+Pre-defined object classes in the library:
 
 * `CLOTHING`
 * `DEVICE`
@@ -32,11 +34,12 @@ For backgrounds, use the `distant` or `NOT reachable` attributes.
 For scenery objects, use the attribute `scenery`.
 ================================================================================
 
+
 // @ADDED:
+[[sec.clothing]]
 === CLOTHING
 
-
-CLOTHING is a piece of clothing the hero or an NPC wears.
+`CLOTHING` is a piece of clothing the hero or an NPC wears.
 As far as the hero is concerned, clothes are prevented from being worn in an illogical order, for example you cannot put on a shirt if you are already wearing a jacket, and so forth.
 For this, clothing objects have a number of numerical attributes that need to be used.
 Note that NPCs cannot wear clothing in layers.
@@ -132,8 +135,8 @@ If the value of an attribute for a piece of CLOTHING is 0 in the table, don't me
 
 
 
-
-==== The clothing table
+[[sec.clothing-table]]
+==== The Clothing Table
 
 Here is the chart showing a selection of fairly typical clothing items and the values to set to obtain appropriate behaviour.
 Should you wish to create an article of CLOTHING not listed, usually a bit of lateral thought as to what it is most like and where it fits into the scheme of things will suggest a workable set of values, but be aware that you MUST use values in this chart, simply adding things with intermediate values is probably going to create nasty bugs:
@@ -204,6 +207,7 @@ include::{utf8dir}/wedding.a3ADocLog[tag=tuxedos]
 
 
 // @ADDED:
+[[sec.device]]
 === DEVICE
 
 DEVICE is a machine or an electronic device, for example a TV.
@@ -289,6 +293,7 @@ END THE.
 
 
 // @ADDED:
+[sec.door]
 === DOOR
 
 
@@ -392,7 +397,7 @@ It is currently closed.
 ================================================================================
 
 
-
+[[sec.locked-doors]]
 ==== Locked doors and keys
 
 To unlock a locked DOOR, it has to have a `matching_key` object attributed to it.
@@ -462,7 +467,7 @@ Above, the `wooden_door2` is also lockable and locked at the start of the game, 
 See also <<ch.short-examples>>, <<sec.short-example.5,example 5>>.
 
 
-
+[[sec.liquid]]
 === LIQUID
 
 LIQUID can be taken only if it is in a container.
@@ -486,6 +491,7 @@ Note, however, that the verb `empty` is not a synonym for `pour`; `empty` only w
 Consequently, [.play]#&gt; _empty bottle_# will work but [.play]#&gt; _empty juice_# won't.
 
 
+[[sec.lightsource]]
 === LIGHTSOURCE
 
 LIGHTSOURCE is `natural` or `NOT natural` (a natural LIGHTSOURCE is for example a match or a torch).
@@ -578,6 +584,7 @@ END THE torch.
 --------------------------------------------------------------------------------
 
 
+[[sec.listed_container]]
 === LISTED_CONTAINER
 
 `LISTED_CONTAINER` is an object which has the `container` property.
@@ -718,6 +725,8 @@ THE ticket_dispenser ISA LISTED_CONTAINER AT lobby
 END THE.
 --------------------------------------------------------------------------------
 
+
+[[sec.sound]]
 === SOUND
 
 `SOUND` can be listened to but not examined, searched, smelled or manipulated.
@@ -737,6 +746,7 @@ END THE.
 --------------------------------------------------------------------------------
 
 
+[[sec.supporter]]
 === SUPPORTER
 
 `SUPPORTER`: You can put things on a SUPPORTER and you can stand, sit down or lie on it.
@@ -926,7 +936,7 @@ It is the author's responsibility to make certain objects in the location `NOT r
 
 
 
-
+[[sec.weapon]]
 === WEAPON
 
 WEAPON is `fireable` (for example a cannon) or `NOT fireable` (for example a baseball bat), the latter being the default.
@@ -943,6 +953,7 @@ END THE.
 --------------------------------------------------------------------------------
 
 
+[[sec.window]]
 === WINDOW
 
 WINDOW can be opened, closed, looked through and out of.
