--- a/extras_src/manual/StdLibMan4_02.adoc
+++ b/extras_src/manual/StdLibMan4_02.adoc
@@ -10,8 +10,11 @@
 
 
 
-[[ch10]]
-= The my_game instance and its attributes
+[[ch.library-messages]]
+= Library Messages
+
+
+== The my_game instance and its attributes
 
 `My_game` is a so called meta-instance that obligatorily has to be included by the author in the game source.
 Without it, the game won't compile successfully.
