--- a/extras_src/manual/StdLibManA_01.adoc
+++ b/extras_src/manual/StdLibManA_01.adoc
@@ -8,8 +8,8 @@
 ********************************************************************************
 ////
 
-
-[[ch14]]
+[appendix]
+[[app.translating]]
 = Translating to other languages
 
 To translate the ALAN system and library to other languages, you should
