--- a/extras_src/manual/StdLibMan4_01.adoc
+++ b/extras_src/manual/StdLibMan4_01.adoc
@@ -10,7 +10,7 @@
 
 
 
-[[ch12]]
+[[ch.runtime-messages]]
 = Runtime messages
 
 Many of the runtime messages built into ALAN have been altered in the library from their default wording as stated in the ALAN manual.
