Purge & Update Additional Resources Section
In "Additional Resources", fix some of the assets filenames to mirror
their current names, and add direct links to open some of these assets,
using relative links that take into account how the distribute StdLib
package is organized.

Remove from both the repository and the "Additional Resources" section
of the manual the compiled sample adventures and their associated IFID
files (end users can compile these themselves), and amend `.gitignore`
rules accordingly.

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -2,7 +2,7 @@
 :doctitle: Alan Standard Library v{StdLibVer} User's Manual
 :author: Anssi Räisänen
 :revnumber: {StdLibVer}-WIP
-:revdate: 2020-09-23
+:revdate: 2020-09-24
 :lang: en
 :doctype: book
 // TOC Settings:
@@ -31,7 +31,10 @@
 //                              CUSTOM ATTRIBUTES
 // =============================================================================
 :AlanWWW: link:https://www.alanif.se/[www.alanif.se^,title="Visit Alan website"]
+
+// Directories Paths:
 :StdLibInc: {utf8dir}/../StdLib
+:StdLibDir: ../../StdLib
 
 // examples files:
 :wedding_alan: pass:q[link:wedding.alan[`wedding.alan`^,title="View example source file"]]
