Man Source README
Update `extras_src/manual/README.md` to mirror the latest reorganization
of the ADoc sources, updating the filenames and their links.
Delete the old Status Table for the ADoc porting stage.

Fix some Chapter titles and Anchor IDs in the StdLib Manual.

--- a/extras_src/manual/StdLibMan1_05.adoc
+++ b/extras_src/manual/StdLibMan1_05.adoc
@@ -9,8 +9,8 @@
 ////
 
 
-[[ch13]]
-= Default attributes used in the standard library
+[[ch.default-attributes]]
+= Default Library Attributes
 
 The attributes in the following list are pre-defined in the library.
 When you coin your own attributes for your game, please be aware that these attributes already exist.
