--- a/extras_src/manual/StdLibMan1_03.adoc
+++ b/extras_src/manual/StdLibMan1_03.adoc
@@ -10,8 +10,8 @@
 
 
 
-[[ch11]]
-= Have the game banner show at the start
+[[ch.game-banner]]
+= The Game Banner
 
 To show the game banner at the start, after an optional intro text, you must add the text `DESCRIBE banner.` after the `START AT` clause, for example:
 
