--- a/extras_src/manual/StdLibMan1_04.adoc
+++ b/extras_src/manual/StdLibMan1_04.adoc
@@ -10,8 +10,10 @@
 
 // PAGE 77 //
 
-[[ch9]]
-= Adding synonyms for existing library words (verbs, object and actor classes)
+[[ch.adding-synonyms]]
+= Adding Synonyms
+
+[big]#_How to add synonyms for existing library words (verbs, object and actor classes)._#
 
 Declare the synonym in your own game source file, outside any instance declarations, and outside the `my_game` instance, like this:
 
