--- a/extras_src/manual/StdLibMan2_05.adoc
+++ b/extras_src/manual/StdLibMan2_05.adoc
@@ -11,7 +11,9 @@
 
 
 [[ch7]]
-= Additional attributes for THINGs: (NOT) distant, (NOT) reachable, scenery
+= Additional THINGs Attributes
+
+== (NOT) distant, (NOT) reachable, scenery
 
 Distant/NOT distant is a new attribute in v2.0 and later versions of the library.
 It has been added to be used alongside with the existing reachable/NOT reachable attributes.
