--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -33,7 +33,7 @@
 :AlanWWW: link:https://www.alanif.se/[www.alanif.se^,title="Visit Alan website"]
 
 // Directories Paths:
-:StdLibInc: {utf8dir}/../StdLib
+:StdLibInc: ../utf8/StdLib
 :StdLibDir: ../../StdLib
 :ExtrasDir: ../../extras
 
