StdLib Man: Revise Intro
Move the ALAN-only bare-bones adventure example from "Ch. 2. Importing
the Library" to the new section "1. Who Needs a Library?" under the
main "Introduction".

In "1. Who Needs a Library?", write an introduction to ALAN's design
philosophy of providing a bare-bones and locale agnostic language, and
how this compares to other IF systems, and how the StdLib aims to provide
a basic library for authors who don't want to write everything from the
ground up.

--- a/extras_src/manual/StdLibMan1.adoc
+++ b/extras_src/manual/StdLibMan1.adoc
@@ -12,7 +12,7 @@
 
 [partintro]
 --
-In the following chapters you'll learn how to integrate the Standard Library into your ALAN adentures, how to set up your working environment, and other useful notions as a beginner to the library.
+In the following chapters you'll be presented with an overiew of the Standard Library, learn how to integrate it into your ALAN adentures, how to set up your working environment, and other useful notions as a beginner to the library.
 --
 
 :leveloffset: +1
