--- a/extras_src/manual/StdLibMan0_intro.adoc
+++ b/extras_src/manual/StdLibMan0_intro.adoc
@@ -19,7 +19,58 @@
 // 		  releases.
 
 This is the manual for the ALAN Standard Library v{StdLibVer}.
-You'll learn how to use the library, together with the ALAN Interactive Fiction Language system v3.0, to create works of interactive fiction, also known as text adventures.
+You'll learn how to use the library, together with the ALAN Interactive Fiction Language system v3.0, to create works of Interactive Fiction, also known as _text adventures_.
+
+
+[[sec.who-needs-library]]
+== Who Needs a Library?
+
+The ALAN IF system adopts a philosophy which is unique among the IF authoring systems.
+Most IF systems ship with a default library defining basic world objects, player commands, and other features that are commonly required to create a text adventure.
+The extent of these default features varies from one IF system to the other, some of them providing an extremely rich set of predefined objects classes and verbs, others focusing on a more basic set.
+
+Finding the right balance in any IF library is a challenging task because the needs of each text adventure are unique, so any library solution tends to be an opinionated compromise on what the standard base line ought to be.
+
+The ALAN language does not define any players commands at all, instead it provides you with the tools to easily create your own verbs from scratch; and, by design, it only defines those core objects classes that are needed by every text adventure (i.e. locations, actors, objects, and a few others), leaving it to the single author to flesh out all the other classes that a game might need.
+
+Therefore, to write a text adventure in ALAN, you won't necessarily need the Standard Library at all.
+It is perfectly possible (and in line with ALAN's philosophy) to define everything in your game by yourself, starting from scratch.
+
+At its bare-bones minimum, an ALAN game needs one location and a `START AT` instruction:
+
+[source,alan]
+--------------------------------------------------------------------------------
+THE meadow ISA LOCATION
+END THE meadow.
+
+START AT meadow.
+--------------------------------------------------------------------------------
+
+
+The above code compiles successfully into a working adventure, and doesn't use the Standard Library at all.
+When you try to play this game, you will find yourself at a location called '`Meadow`' but you won't be able to do anything -- nothing of what you type at the prompt will be understood, because there are no commands defined in the adventure.
+The ALAN language doesn't define any player commands, therefore you'll have to implement everything from the ground up, by yourself.
+
+This aspect of ALAN's design philosophy might seem puzzling to some IF authors, especially to authors which are new to IF; so let's expand on this topic, which is what makes ALAN unique among the IF authoring systems.
+
+Experienced IF authors have all struggled in one way or another with the various pre-defined libraries of any IF system, either feeling that the library is too huge and detailed, or that it's too small and lacking granularity.
+But, most of all, a huge amount of energy is often spent on adapting the native library to one's personal needs -- overriding predefined commands and messages, suppressing others, and implementing new versions thereof -- which soon turns out to be a daunting task, as well as introducing unnecessary bloat to the adventure source code.
+
+Most important, any native library is necessarily bound to a specific spoken language (a _locale_), usually the English language, which means that IF authors targeting other languages will have to either translate the whole library or, if this can't be done, override every single verb and message with a new version in the target language -- an ordeal which usually results in huge source files.
+
+ALAN, on the other hand, doesn't even contain a notion of the various directions (_east_, _north_, _up_, etc.), but will deduce them from each adventure source code, based on how locations are connected.
+
+By design, ALAN is a _locale agnostic_ IF system -- i.e. it doesn't assume any target language as being the default one.
+Surely, the instructions of the ALAN language resemble English (pretty much like any programming language), but beside this there is no locale specific infrastructure to the language that would stand in the way of creating an adventure in any spoken language that uses the Latin alphabet.
+
+The ALAN philosophy is entirely devoted to freedom -- not only because it's a free and open source system, but because it provides IF authors with utter freedom when it comes to designing their own adventure worlds.
+Needless to say, the price of a higher freedom is always a higher burden on those who enjoy it -- in this case, the need to create the entire adventure world from the ground up.
+
+For this reason the Standard Library was created, to allow authors to start working on their adventures with a predefined set of common players commands (verbs) and responses, useful objects types (containers, liquids, weapons, doors, etc.), and a solid infrastructure of rules and relations that binds them neatly together, providing a well organized and realistic environment that should fit most adventures.
+
+'''
+
+// -----------------------------------------------------------------------------
 
 The library defines numerous verbs and commands commonly used in gameplay, such as _examine_, _take_, _drop_, _attack_, etc., along with appropriate checks and default responses to ensure they are used correctly.
 It also defines various global attributes (e.g. `takeable`, `NOT openable`), as well as object and actor attributes and classes (e.g. `CLOTHING`, `WEAPON`, `PERSON`), together with illegal parameter messages (e.g. "`That's not something you can examine`").
